# crm114

./: CMakeFiles.txt  CMakeLists.txt  COLOPHON.txt  Makefile  crm114.h  crm_svm.h  crm_svm_lib_fncts.h  crm_svm_matrix_util.h  cssutil.c  e2.out  mailfilter.cf  maillib.crm  megatest.sh
config/: crm114_config.h.in
crm/: mailreaver.crm
examples/: blacklist.mfp.example
ext/: reto_procmailrc.recipe
include/: crm114_structs.h  crm114_sysincludes.h
man/: crm.1.in  cssdiff.1.in  cssutil.1.in
src/: crm_main.c  crm_pca.c  crm_pca.h  crm_pca_lib_fncts.c  crm_pca_lib_fncts.h  crm_svm.c  crm_svm_lib_fncts.c  crm_svm_matrix.c  crm_svm_matrix.h  crm_svm_matrix_util.c  crm_svm_quad_prog.c  crm_svm_quad_prog.h  crm_util_errorhandlers.c  crmregex_tre.c  cssdiff.c  cssmerge.c  osbf-util.c
